tests/config_module_system_node_resolve_dirname/config_module_system_node_resolve_dirname.exp
Error --------------------------------------------------- subdir/sublevel.js:5:2

Cannot cast `name` to string literal `node_modules/testproj2` because string
literal `subdir/custom_resolve_dir/testproj2` is incompatible with string
literal `node_modules/testproj2`.

Error: subdir/sublevel.js:5
  5: (name: "node_modules/testproj2"); // Error: Resolve from sibling 'custom_resolve_dir' first!
      ^^^^ Cannot cast `name` to string literal `node_modules/testproj2` because string literal `subdir/custom_resolve_dir/testproj2` [1] is incompatible with string literal `node_modules/testproj2` [2].
  References:
    3: export var name: "subdir/custom_resolve_dir/testproj2" = "subdir/custom_resolve_dir/testproj2";
                        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [1]: string literal `subdir/custom_resolve_dir/testproj2`. See: subdir/custom_resolve_dir/testproj2/index.js:3
    5: (name: "node_modules/testproj2"); // Error: Resolve from sibling 'custom_resolve_dir' first!
              ^^^^^^^^^^^^^^^^^^^^^^^^ [2]: string literal `node_modules/testproj2`

Error ---------------------------------------------------------- toplevel.js:6:2

Cannot cast `name` to string literal `custom_resolve_dir/testproj` because
string literal `node_modules/testproj` is incompatible with string literal
`custom_resolve_dir/testproj`.

Error: toplevel.js:6
  6: (name: "custom_resolve_dir/testproj"); // Error: Resolve from node_modules first!
      ^^^^ Cannot cast `name` to string literal `custom_resolve_dir/testproj` because string literal `node_modules/testproj` [1] is incompatible with string literal `custom_resolve_dir/testproj` [2].
  References:
    3: export var name: "node_modules/testproj" = "node_modules/testproj";
                        ^^^^^^^^^^^^^^^^^^^^^^^ [1]: string literal `node_modules/testproj`. See: node_modules/testproj/index.js:3
    6: (name: "custom_resolve_dir/testproj"); // Error: Resolve from node_modules first!
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ [2]: string literal `custom_resolve_dir/testproj`


Found 2 errors
